--- a/main.html
+++ b/main.html
@@ -10,14 +10,10 @@
   <body>
     <main>
       <article class="banner">
-        <div class="banner1">
-          <img src="./image/banner1.jpeg" alt="未出現圖片">
-        </div>
-        <div class="banner2">
-          <img src="./image/banner2.jpg" alt="未出現圖片">
-        </div>
-        <div class="banner3">
-          <img src="./image/banner3.jpg" alt="未出現圖片">
+        <div id="cover" class="carousel">
+          <div class="banner1"></div>
+          <div class="banner2"></div>
+          <div class="banner3"></div>
         </div>
         <div class="mask">
           <div class="dog_amount">
@@ -26,21 +22,29 @@
           <div class="cat_amount">
             <a href="#">待認養</a>
           </div>
-          <div class="banner1">
-            <h1>給他一個溫暖的家</h1>
-            <h2>歡迎民眾認養流浪犬貓，領養不棄養</h2>
+          <div class="word">
+            <div class="banner1">
+              <h1>給他一個溫暖的家</h1>
+              <h2>歡迎民眾認養流浪犬貓，領養不棄養</h2>
+            </div>
+            <div class="banner2">
+              <h1>陪伴與等待</h1>
+              <h2>以同等的愛與關懷，協助流浪動物找到幸福</h2>
+            </div>
+            <div class="banner3">
+              <h1>安穩的幸福</h1>
+              <h2>幸好遇到了你，給予我溫暖與快樂</h2>
+            </div>
+            <span class="arrow_out"></span>
+            <span class="arrow_int"></span>
           </div>
-          <div class="banner2">
-            <h1>陪伴與等待</h1>
-            <h2>以同等的愛與關懷，協助流浪動物找到幸福</h2>
-          </div>
-          <div class="banner3">
-            <h1>安穩的幸福</h1>
-            <h2>幸好遇到了你，給予我溫暖與快樂</h2>
-          </div>
+          <div class="cat"></div>
         </div>
-        <div class="cat"></div>
-        <div class="scroll">scroll</div>
+        <div class="scroll">
+          scroll
+          <span class="circle"></span>
+          <span class="triangle"></span>
+        </div>
       </article>
     </main>
   </body>  
