--- a/banner.html
+++ b/banner.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="./css/body.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/banner.css">
   </head>
 
   <body>
