--- a/banner.html
+++ b/banner.html
@@ -40,7 +40,7 @@
       <div class="cat"></div>
     </div>
     <div class="scroll">
-      scroll
+      Scroll
       <span class="circle"></span>
       <span class="triangle"></span>
     </div>
