--- a/homepage-aside.html
+++ b/homepage-aside.html
@@ -1,8 +1,22 @@
-<aside>
-    <div class="top">
-        TOP
-        <span class="circle"></span>
-        <span class="triangle"></span>
-    </div>
-    <div class="cat_top"></div>
-</aside>
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="./css/body.css">
+    <link rel="stylesheet" href="./css/homepage-aside.css">
+</head>
+
+
+<body>
+    
+    <aside>
+        <div class="top">
+            Top
+            <span class="circle"></span>
+            <span class="triangle"></span>
+        </div>
+        <div class="cat_top"></div>
+    </aside>
+</body>
+</html>
