新增nav的愛心

--- a/nav.html
+++ b/nav.html
@@ -81,9 +81,10 @@
           </div>
         </li>
       </ul>
-      <div class="heart">
-      </div>
+      <a href="#" class="heart"><i class="fas fa-heart"></i></a>
     </div>
   </nav>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"> </script>
 </body>
 </html>
