認養區愛心無法浮現

--- a/homepage_adopt.html
+++ b/homepage_adopt.html
@@ -24,7 +24,10 @@
         <section class="animal_flex">
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/C3.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
+                                
                 <div class="select_word">
                     中和區 / 成年 / 母
                     <br>
@@ -33,7 +36,9 @@
             </div>
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/C2.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
                 <div class="select_word">
                     板橋區 / 成年 / 母
                     <br>
@@ -42,7 +47,9 @@
             </div>
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/C6.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
                 <div class="select_word">
                     中和區 / 成年 / 母
                     <br>
@@ -51,7 +58,9 @@
             </div>
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/Z1.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
                 <div class="select_word">
                     板橋區 / 成年 / 母
                     <br>
@@ -60,7 +69,9 @@
             </div>
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/Z5.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
                 <div class="select_word">
                     板橋區 / 成年 / 母
                     <br>
@@ -69,7 +80,9 @@
             </div>
             <div class="adopt_select">
                 <a href="#" class="adopt_pick" target="_blank"><img src="./image/animal/Z8.jfif" alt="未出現圖片"></a>
-                <span class="heart"></span>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
                 <div class="select_word">
                     板橋區 / 成年 / 公
                     <br>
@@ -78,4 +91,10 @@
             </div>
         </section>
     </div>
+    <span class="heart">
+        <i class="fas fa-heart"></i>
+    </span>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"> </script>
+
 </body>  
+</html>
