--- a/nav.html
+++ b/nav.html
@@ -81,7 +81,9 @@
           </div>
         </li>
       </ul>
-      <a href="#" class="heart"><i class="fas fa-heart"></i></a>
+      <a href="#" class="heart">
+        <i class="fas fa-heart"></i>
+      </a>
     </div>
   </nav>
 
