--- a/hompage_talk.html
+++ b/hompage_talk.html
@@ -17,7 +17,7 @@
            
                 <!-- -on為放大對話框 -->
 
-                <div class="talk_picture_on">
+                <div class="talk_picture">
                     <img src="./image/talk/1.jpg" alt="未出現圖片">
                     <div class="talkword">
                         上百隻貓狗都在收容所等待,而我等了三年。
