首頁新聞區

--- a/homepage_news.html
+++ b/homepage_news.html
@@ -14,37 +14,53 @@
             <div class="newspick">
                 <a href="#"><img src="./image/news/2.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
-                    新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    <h1>新聞標題</h1>
+                    <h2>新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
             <div class="newspick">
                 <a href="#"><img src="./image/news/3.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
-                    新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    <h1>新聞標題</h1>
+                    <h2>新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
             <div class="newspick">
                 <a href="#"><img src="./image/news/4.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
+                    <h1>新聞標題</h1>
+                    <h2>
                     新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
             <div class="newspick">
                 <a href="#"><img src="./image/news/5.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
+                    <h1>新聞標題</h1>
+                    <h2>
                     新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
             <div class="newspick">
                 <a href="#"><img src="./image/news/6.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
+                    <h1>新聞標題</h1>
+                    <h2>
                     新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
             <div class="newspick">
                 <a href="#"><img src="./image/news/1.jpg" alt="未出現圖片"></a>
                 <div class="newsword">
+                    <h1>新聞標題</h1>
+                    <h2>
                     新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容新聞內容，新聞內容新聞內容新聞內容新聞內容
+                    </h2>
                 </div>
             </div>
 
