設定標題分隔線

--- a/homepage_news.html
+++ b/homepage_news.html
@@ -9,7 +9,10 @@
 
 <body>
     <article class="homenews">
-        <div class="newstitle">最新消息</div>
+        <div class="newstitle">最新消息
+            <div><hr></div>
+        </div>
+         
         <section class="newsarea">
             <div class="newspick">
                 <a href="#"><img src="./image/news/2.jpg" alt="未出現圖片"></a>
