--- a/homepage_adopt.html
+++ b/homepage_adopt.html
@@ -10,7 +10,8 @@
 <body>
     <div class="home_adopt">
         <div class="home_title">
-            認養動物            
+            認養動物 
+            <div><hr></div>           
         </div>
         <div class="find">
             <div class="find_link">
