--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,7 @@
         <div class="fb"><i class="fab fa-facebook"></i></div>
         <h1>三芝動物之家</h1>
         <h2>
-          地址：新北市三芝區圓山村二坪頂(北18鄉道白沙安樂園附近
+          地址：新北市三芝區圓山村二坪頂(北18鄉道白沙安樂園附近)
           <br>
           電話 ：02-26365436
           <br>
@@ -155,6 +155,8 @@
   </article>
   
   
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"> </script>
+
+
 </body>
 </html>
