--- a/home.html
+++ b/home.html
@@ -94,40 +94,42 @@
     
     <!-- banner.html -->
     <article class="banner">
-        <div id="cover" class="carousel">
-            <div class="banner1"></div>
-            <div class="banner2"></div>
-            <div class="banner3"></div>
-        </div>
-        <div class="mask">
-            <div class="dog_amount">
-                <a href="#">待認養</a>
+        <div class="banner_container">
+            <div id="cover" class="carousel">
+                <div class="banner1"></div>
+                <div class="banner2"></div>
+                <div class="banner3"></div>
             </div>
-            <div class="cat_amount">
-                <a href="#">待認養</a>
+            <div class="mask">
+                <div class="dog_amount">
+                    <a href="#">待認養</a>
+                </div>
+                <div class="cat_amount">
+                    <a href="#">待認養</a>
+                </div>
+                <div class="word">
+                    <div class="banner1">
+                        <h1>給他一個溫暖的家</h1>
+                        <h2>歡迎民眾認養流浪犬貓，領養不棄養</h2>
+                    </div>
+                    <div class="banner2">
+                        <h1>陪伴與等待</h1>
+                        <h2>以同等的愛與關懷，協助流浪動物找到幸福</h2>
+                    </div>
+                    <div class="banner3">
+                        <h1>安穩的幸福</h1>
+                        <h2>幸好遇到了你，給予我溫暖與快樂</h2>
+                    </div>
+                    <span class="arrow_out"></span>
+                    <span class="arrow_int"></span>
+                </div>
+                <div class="cat"></div>
             </div>
-            <div class="word">
-                <div class="banner1">
-                    <h1>給他一個溫暖的家</h1>
-                    <h2>歡迎民眾認養流浪犬貓，領養不棄養</h2>
-                </div>
-                <div class="banner2">
-                    <h1>陪伴與等待</h1>
-                    <h2>以同等的愛與關懷，協助流浪動物找到幸福</h2>
-                </div>
-                <div class="banner3">
-                    <h1>安穩的幸福</h1>
-                    <h2>幸好遇到了你，給予我溫暖與快樂</h2>
-                </div>
-                <span class="arrow_out"></span>
-                <span class="arrow_int"></span>
+            <div class="scroll">
+                Scroll
+                <span class="circle"></span>
+                <span class="triangle"></span>
             </div>
-            <div class="cat"></div>
-        </div>
-        <div class="scroll">
-            Scroll
-            <span class="circle"></span>
-            <span class="triangle"></span>
         </div>
     </article>
     
