adopt狗狗頁面完成

--- a/adopt.html
+++ b/adopt.html
@@ -137,7 +137,7 @@
                         <input type="radio" name="gender" id="female">
                         <label for="female">母</label>
                     </div>
-                    <div class="health">
+                    <div class="health_check">
                         <input type="checkbox" name="ligation" id="ligation">
                         <label for="ligation">已結紮</label>
                         
