喜愛清單完成

--- a/like.html
+++ b/like.html
@@ -183,6 +183,48 @@
                 </button>
             </section>
 
+            <section class="animal">
+                <div class="photo"><img src="./image/animal/Z5.jfif" alt="未顯示圖片"></div>
+                <div class="word">
+                    收容編號:AAADG2021080701
+                    <br>
+                    姓名:旺旺
+                    <br>
+                    年齡:3歲2個月
+                    <br>
+                    性別:公
+                    <br>
+                    品種:混種
+                    <br>
+                    地點:板橋收容所
+                </div>
+                
+                <button class="reserve"type="submit">
+                    <a href="#">立即預約</a> 
+                </button>
+            </section>
+
+            <section class="animal">
+                <div class="photo"><img src="./image/animal/C6.jfif" alt="未顯示圖片"></div>
+                <div class="word">
+                    收容編號:AAADG2021080701
+                    <br>
+                    姓名:喵喵
+                    <br>
+                    年齡:3歲2個月
+                    <br>
+                    性別:公
+                    <br>
+                    品種:混種
+                    <br>
+                    地點:板橋收容所
+                </div>
+                
+                <button class="reserve"type="submit">
+                    <a href="#">立即預約</a> 
+                </button>
+            </section>
+
 
 
         </article>
