--- a/home.html
+++ b/home.html
@@ -331,7 +331,7 @@
         
             <div class="talk1_talk " id="talk">
                 
-                <div class="talk_picture_on"> <!-- -on為放大對話框 -->
+                <div class="talk_picture"> <!-- -on為放大對話框 -->
                     <div class="picture">
                         <img src="./image/talk/1.jpg" alt="未出現圖片">
                     </div>
@@ -391,7 +391,7 @@
             </div>
 
             <div class="talk6_talk" id="talk">
-                <div class="talk_picture">
+                <div class="talk_picture_on">
 
                     <div class="picture">
                         <img src="./image/talk/6.jpg" alt="未出現圖">
