--- a/hospital.html
+++ b/hospital.html
@@ -94,9 +94,33 @@
          <!-- 麵包屑 -->
          <div class="bread">
             <a href="#">首頁</a> / 
-            <a href="#">認養狗狗</a> /
-            動物介紹頁面
+            動物醫院
         </div>
+
+        <!-- 嵌入新北動物醫院地圖 -->
+        <article class="map">
+            <span class="map_title">新北市動物醫院</span>       
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d28930.86529276705!2d121.49601712216233!3d24.987942966986257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z5paw5YyX5biC5YuV54mp6Yar6Zmi!5e0!3m2!1szh-TW!2stw!4v1629117668424!5m2!1szh-TW!2stw" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </article>
+
+
+        <!-- 連結至外部，動物絕育和樹葬 -->
+        <article class="external_link">
+            <a href="https://www.neuter.ntpc.gov.tw/Login.aspx" target="_blank">
+                <img src="./image/news/1.jpg" alt="未顯示圖片">
+                <span>動物絕育管理</span>
+            </a>
+
+            <a href="https://www.neuter.ntpc.gov.tw/Login.aspx" target="_blank">
+                <img src="./image/news/2.jpg" alt="未顯示圖片">
+                <span>寵物樹葬</span>
+            </a>
+        </article>
+
+       
+        
+
+
     </main>
 
 
