--- a/home.html
+++ b/home.html
@@ -579,9 +579,11 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"> </script>
     <script>
+        
+
+        // 輪播圖
         let slideIndex = 0;
         showSlides();
-
         function showSlides() {
           var i;
           let slides = document.getElementsByClassName("mySlides");
@@ -597,7 +599,6 @@
 
         let wordIndex = 0;
         wordSlides();
-
         function wordSlides() {
           var a;
           let slides = document.getElementsByClassName("mySlides");
@@ -610,6 +611,9 @@
           word[wordIndex-1].style.display = "block";  
           setTimeout(wordSlides, 3000); // Change image every 2 seconds
         }
+
+
+
         </script>
 </body>
 </html>
