--- a/animal_info.html
+++ b/animal_info.html
@@ -21,13 +21,13 @@
                         動物認養
                         <ul class="adoption_list">
                             <li>
-                                <a href="#">認養狗狗</a>
+                                <a href="./adopt.html">認養狗狗</a>
                             </li>
                             <li>
-                                <a href="#">認養貓咪</a>
+                                <a href="./adopt.html">認養貓咪</a>
                             </li>
                             <li>
-                                <a href="#">預約認養</a>
+                                <a href="./reserve.html">預約認養</a>
                             </li>
                         </ul>
                     </div>
@@ -37,26 +37,26 @@
                         醫療資訊
                         <ul class="health_list">
                             <li>
-                                <a href="#">動物醫院</a>
+                                <a href="./hospital.html">動物醫院</a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">絕育管理</a>
+                                <a href="https://www.neuter.ntpc.gov.tw/Login.aspx" target="_blank">絕育管理</a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">寵物樹葬</a>
+                                <a href="https://www.ahiqo.ntpc.gov.tw/cht/index.php?code=list&ids=89" target="_blank">寵物樹葬</a>
                             </li>
                         </ul>
                     </div>
                 </li>
                 <li>
-                    <a href="#">最新消息</a>
+                    <a href="./news.html">最新消息</a>
                 </li>
                 <li>
                     <div class="location">
                         各區動物之家
                         <ul class="location_list">
                             <li>
-                                <a href="#">瑞芳動物之家</a>
+                                <a href="./address.html">瑞芳動物之家</a>
                             </li>
                             <li>
                                 <a href="#">三芝動物之家</a>
@@ -83,7 +83,7 @@
                     </div>
                 </li>
             </ul>
-            <a href="#" class="heart">
+            <a href="./like.html" class="heart">
                 <i class="fas fa-heart"></i>
             </a>
         </div>
@@ -93,9 +93,9 @@
     <main class="main">
          <!-- 麵包屑 -->
          <div class="bread">
-            <a href="#">首頁</a> / 
-            <a href="#">認養狗狗</a> /
-            動物介紹頁面
+            <a href="./home.html">首頁</a> / 
+            <a href="./adopt.html">認養狗狗</a> /
+            <span>動物介紹頁面</span>
         </div>
 
         <!-- 圖片區 -->
@@ -161,7 +161,7 @@
 
         <div class="button">
             <button class="reserve"type="submit">
-                <a href="#">立即預約</a> 
+                <a href="./reserve.html">立即預約</a> 
             </button>
 
 
