--- a/home.html
+++ b/home.html
@@ -569,7 +569,7 @@
               下午14時-16時
             </h2>
           </div>
-          © 僅供緯育TibaMe教育教學使用
+          <div>© 僅供緯育TibaMe教育教學使用 </div>
         </div>
         
         
